@@ -42936,6 +42936,30 @@ for success
 for an error
 @end table
 
+@item e
+@anchor{read expedited registers packet}
+@cindex @samp{e} packet
+Read expedited registers.
+
+Reply:
+@table @samp
+@item @var{n1}:@var{r1};@var{n2}:@var{r2};@dots{}
+The reply contains a list of @samp{@var{n}:@var{r}} pairs, where each
+pair carries the value @var{r} for the register numbered @var{n},
+where @var{n} is a hexadecimal number.  The corresponding @var{r}
+gives the register's value as a series of bytes in target byte order,
+with each byte given by a two-digit hex number.
+@end table
+
+The registers sent by the remote target are those that are deemed
+important (e.g.@: most frequently accessed) registers.  The list is
+determined by the target and is typically the same as the list sent in
+a stop reply packet.  @xref{Stop Reply Packets}.
+
+The @samp{e} packet can be an alternative to the @samp{g} packet to
+reduce the transfer overhead between @value{GDBN} and the remote
+target when the complete register file of a thread is large.
+
 @item F @var{RC},@var{EE},@var{CF};@var{XX}
 @cindex @samp{F} packet
 A reply from @value{GDBN} to an @samp{F} packet sent by the target.
