@@ -135,6 +135,15 @@ qFixedThreadList
 
   Query packet to check if the target's thread list is fixed.
 
+e
+
+  Fetch the "expedited" registers from the remote target.  These are
+  the registers that are deemed the most important by the target and
+  are typically the same as those sent in a 'T' stop reply packet.
+  The 'e' packet is can be an alternative to the 'g' packet to reduce
+  the transfer overhead between GDB and the remote target when the
+  complete register file of a thread is large.
+
 *** Changes in GDB 14
 
 * GDB now supports the AArch64 Scalable Matrix Extension 2 (SME2), which
